<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:openDrawer="start">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:defaultNavHost="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/toolBarLLC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/menu"
                            android:textColor="@color/black"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/my_color"
                            app:cardCornerRadius="50dp">

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:layout_marginEnd="3dp"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_marginHorizontal="5dp"
                                    android:src="@drawable/language_icon" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@string/ind_inr_en"
                                    android:textColor="@color/black"
                                    android:textSize="12sp"
                                    app:drawableEndCompat="@drawable/arrow_down_icon" />

                            </androidx.appcompat.widget.LinearLayoutCompat>

                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            app:cardBackgroundColor="@color/my_color"
                            app:cardCornerRadius="100dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="3dp"
                                android:src="@drawable/search_icon" />

                        </com.google.android.material.card.MaterialCardView>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/profileMCV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:strokeColor="@color/white">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/userProfileIV"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />

                            <TextView
                                android:id="@+id/userNameTV"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="5dp"
                                android:layout_weight="1"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit_profile"
                                android:textColor="@color/blue_color"
                                android:textSize="14sp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/messageAndNotificationLLC"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:cardBackgroundColor="@color/white">

                        <include
                            android:id="@+id/messageLayout"
                            layout="@layout/rv_layout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1" />

                        <include
                            android:id="@+id/notificationLayout"
                            layout="@layout/rv_layout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/textTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/apps"
                        android:textColor="@color/my_color"
                        android:textSize="12sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintLeft_toLeftOf="@id/textTV"
                        app:spanCount="2"
                        tools:listitem="@layout/rv_layout" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/seeMoreButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:backgroundTint="@color/my_color"
                        android:text="@string/see_more"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:cornerRadius="5dp" />

                    <TextView
                        android:id="@+id/helpMoreTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/help_more"
                        android:textColor="@color/my_color"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/settingPrivacyLLC"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <include
                            android:id="@+id/settingLayout"
                            layout="@layout/rv_layout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1" />

                        <include
                            android:id="@+id/privacyLayout"
                            layout="@layout/rv_layout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/termsAndContactLLC"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <include
                            android:id="@+id/termsLayout"
                            layout="@layout/rv_layout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1" />

                        <include
                            android:id="@+id/contactLayout"
                            layout="@layout/rv_layout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/rateUsButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        app:strokeColor="@color/white"
                        app:cardBackgroundColor="@color/white"
                        app:cornerRadius="3dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/image"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_launcher_background" />

                            <TextView
                                android:id="@+id/rateUs"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/logoutMCV"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="50dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        app:cardCornerRadius="8dp"
                        app:strokeColor="@color/red_color"
                        app:strokeWidth="1dp">

                        <TextView
                            android:id="@+id/signOutTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/red_color"
                            android:textSize="12sp" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </ScrollView>

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>